minor parameter changes.

--- a/6. Neural Networks/DL_Hyperparameters_V3.ipynb
+++ b/6. Neural Networks/DL_Hyperparameters_V3.ipynb
@@ -338,8 +338,8 @@
     "from tensorflow.keras import regularizers\n",
     "model_r = keras.Sequential()\n",
     "model_r.add(layers.Input(shape=(784,)))\n",
-    "model_r.add(layers.Dense(256, activation='sigmoid', kernel_regularizer=regularizers.l2(0.01)))\n",
-    "model_r.add(layers.Dense(128, activation='sigmoid',kernel_regularizer=regularizers.l2(0.01)))\n",
+    "model_r.add(layers.Dense(256, activation='sigmoid', kernel_regularizer=regularizers.l2(0.1)))\n",
+    "model_r.add(layers.Dense(128, activation='sigmoid',kernel_regularizer=regularizers.l2(0.1)))\n",
     "model_r.add(layers.Dense(10, activation='softmax'))\n",
     "model_r.summary()"
    ]
@@ -369,6 +369,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linalg.norm(model.layers[2].get_weights()[0] - model_r.layers[2].get_weights()[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -386,10 +395,10 @@
     "\n",
     "model_rd.add(layers.Input(shape=(784,)))\n",
     "model_rd.add(layers.Dense(256, activation='sigmoid'))\n",
-    "model_rd.add(Dropout(0.7))\n",
+    "model_rd.add(Dropout(0.1))\n",
     "\n",
     "model_rd.add(layers.Dense(128, activation='sigmoid'))\n",
-    "model_rd.add(Dropout(0.6))\n",
+    "model_rd.add(Dropout(0.1))\n",
     "\n",
     "model_rd.add(layers.Dense(10, activation='softmax'))\n",
     "model_rd.summary()"
@@ -471,12 +480,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_re = keras.Sequential()\n",
-    "model_re.add(layers.Dense(256, activation='sigmoid', input_shape=(784,)))\n",
-    "model_re.add(layers.Dense(128, activation='sigmoid'))\n",
-    "model_re.add(layers.Dense(10, activation='softmax'))\n",
+    "#model_re = keras.Sequential()\n",
+    "#model_re.add(layers.Dense(256, activation='sigmoid', input_shape=(784,)))\n",
+    "#model_re.add(layers.Dense(128, activation='sigmoid'))\n",
+    "#model_re.add(layers.Dense(10, activation='softmax'))\n",
     "\n",
-    "model_re.compile(loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "#model_re.compile(loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "es = keras.callbacks.EarlyStopping(monitor='val_accuracy',\n",
     "                              min_delta=0.01,\n",
@@ -683,7 +692,7 @@
   "kernelspec": {
    "display_name": "da5401",
    "language": "python",
-   "name": "da5401"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -695,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
